testsuite/tests/indexed-types/should_compile/T3208b.stderr

T3208b.hs:15:10: error:
    • Could not deduce (OBJECT o0) arising from a use of ‘fce’
      from the context: (OTerm a ~ STerm a, OBJECT a, SUBST a)
        bound by the type signature for:
                   fce' :: forall a c.
                           (OTerm a ~ STerm a, OBJECT a, SUBST a) =>
                           a -> c
        at T3208b.hs:14:1-56
      The type variable ‘o0’ is ambiguous
    • In the expression: fce (apply f)
      In an equation for ‘fce'’: fce' f = fce (apply f)
